Read JVMOptions from Info.plist and fix bundle executable path to address code sign problem.